euphony-sc-core/src/snapshots/euphony_sc_core__osc__synthdef__load_dir_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/d_loadDir",
            args: [
                String(
                    "path/to/dir",
                ),
            ],
        },
    ),
)
