euphony-sc-core/src/snapshots/euphony_sc_core__osc__synthdef__receive_test-3.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/d_recv",
            args: [
                Blob(
                    [
                        1,
                        2,
                    ],
                ),
            ],
        },
    ),
)
